Fix typos [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/T1/03_bagging.html
+++ b/src/Notes/Master/2C_2C/AAII/T1/03_bagging.html
@@ -95,7 +95,7 @@ The bagged classifier selects the class with the most votes from the \(B\) trees
 </p>
 
 <p>
-Often we require the <span id="Bagging-Bagging on Decision Trees-class-probability"></span><strong id="class-probability">class-probability</strong> estimates at \(x\). For many classifiers \(\hat{G}(x)\) there is already an underlying function \(f^(x)\) that <span id="Bagging-Bagging on Decision Trees-estimates the class probabilities at"></span><strong id="estimates the class probabilities at">estimates the class probabilities at</strong> \(x\) (for trees, the class proportions in the terminal node). An alternative bagging strategy is to <span id="Bagging-Bagging on Decision Trees-average these"></span><strong id="average these">average these</strong> instead.
+Often we require the <span id="Bagging-Bagging on Decision Trees-class-probability"></span><strong id="class-probability">class-probability</strong> estimates at \(x\). For many classifiers \(\hat{G}(x)\) there is already an underlying function \(\hat{f}(x)\) that <span id="Bagging-Bagging on Decision Trees-estimates the class probabilities at"></span><strong id="estimates the class probabilities at">estimates the class probabilities at</strong> \(x\) (for trees, the class proportions in the terminal node). An alternative bagging strategy is to <span id="Bagging-Bagging on Decision Trees-average these"></span><strong id="average these">average these</strong> instead.
 </p>
 
 <p>
