--- a/src/Notes/Master/2C_2C/AAII/T1/04_random_forests.html
+++ b/src/Notes/Master/2C_2C/AAII/T1/04_random_forests.html
@@ -39,7 +39,7 @@
 <div id="Random Forests-Definition"><h2 id="Definition" class="header"><a href="#Random Forests-Definition">Definition</a></h2></div>
 
 <p>
-The idea in random forests (Algorithm 15.1) is to <span id="Random Forests-Definition-improve the variance reduction of bagging by reducing the correlation between the trees"></span><strong id="improve the variance reduction of bagging by reducing the correlation between the trees">improve the variance reduction of bagging by reducing the correlation between the trees</strong>, without increasing the variance too much. This is achieved in the tree-growing process through <span id="Random Forests-Definition-random selection of the input variables"></span><strong id="random selection of the input variables">random selection of the input variables</strong>.
+The idea in random forests (ilustrated on the image below) is to <span id="Random Forests-Definition-improve the variance reduction of bagging by reducing the correlation between the trees"></span><strong id="improve the variance reduction of bagging by reducing the correlation between the trees">improve the variance reduction of bagging by reducing the correlation between the trees</strong>, without increasing the variance too much. This is achieved in the tree-growing process through <span id="Random Forests-Definition-random selection of the input variables"></span><strong id="random selection of the input variables">random selection of the input variables</strong>.
 </p>
 
 <p>
