--- a/src/Notes/Master/2C_2C/DL/01_foundation.html
+++ b/src/Notes/Master/2C_2C/DL/01_foundation.html
@@ -75,11 +75,11 @@ In the following section, we'll introduce <span id="T1. Fundamentos de las Redes
 </p>
 
 \begin{align}
-w \rightarrow w - \lambda \nabla (J(w))$, where $\lambda$ is the learning rate.
+w \rightarrow w - \lambda \nabla (J(w))
 \end{align}
 
 <p>
-First we calculate the weight update value
+where \(\lambda\) is the learning rate. First we calculate the weight update value
 </p>
 
 \begin{align}
@@ -129,7 +129,7 @@ The second reason is the <span id="T1. Fundamentos de las Redes Neuronales Profu
 <div id="T1. Fundamentos de las Redes Neuronales Profundas-Introducing popular open source libraries"><h2 id="Introducing popular open source libraries" class="header"><a href="#T1. Fundamentos de las Redes Neuronales Profundas-Introducing popular open source libraries">Introducing popular open source libraries</a></h2></div>
 
 <p>
-The basic unit for data storage is the tensor. A tensor is a generalization of a matrix to higher dimensions.
+The basic unit for data storage is the <span id="T1. Fundamentos de las Redes Neuronales Profundas-Introducing popular open source libraries-tensor"></span><strong id="tensor">tensor</strong>. A tensor is a generalization of a matrix to higher dimensions.
 </p>
 
 <p>
