[AGAA] Finish notes for 06_08 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -77,6 +77,9 @@ Systems of Equations
 </li><li>
 <a href="06_07.html">Systems of Inequalities and Linear Programming</a>
 
+</li><li>
+<a href="06_08.html">Partial Fractions</a>
+
 </li></ol>
 </li></ol>
 </div>
