[AGAA] Finish notes for 07_01 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -81,6 +81,14 @@ Systems of Equations
 <a href="06_08.html">Partial Fractions</a>
 
 </li></ol>
+</li><li>
+Analytic Geometry and Nonlinear Systems
+
+<ol>
+<li>
+<a href="07_01.html">Circles and Parabolas</a>
+
+</li></ol>
 </li></ol>
 </div>
   
