[DL] Finish rnn section [skip ci]

--- a/src/Notes/Master/2C_2C/DL/02/index.html
+++ b/src/Notes/Master/2C_2C/DL/02/index.html
@@ -40,6 +40,9 @@
 <li>
 <a href="01_conv_nets.html">Convolutional Nets</a>
 
+</li><li>
+<a href="02_rnn.html">Recurrent Neural Networks</a>
+
 </li></ol>
 </div>
   
