[DL] Final latex fix??? [skip ci]

--- a/src/Notes/Master/2C_2C/DL/02/02_rnn.html
+++ b/src/Notes/Master/2C_2C/DL/02/02_rnn.html
@@ -182,7 +182,7 @@ On general:
 </p>
 
 \begin{align}
-\frac{\delta L_i}{\delta W} = \sum_{t=0}^i \frac{\delta L_i}{\delta_y_i} \frac{\delta y_i}{\delta h_{i-1}} \left(\prod_{j=t+1}^i \frac{\delta h_j}{\delta h_{j-1}}\right)\frac{\delta h_i}{\delta_W}
+\frac{\delta L_i}{\delta W} = \sum_{t=0}^i \frac{\delta L_i}{\delta y_i} \frac{\delta y_i}{\delta h_{i-1}} \left(\prod_{j=t+1}^i \frac{\delta h_j}{\delta h_{j-1}}\right)\frac{\delta h_i}{\delta_W}
 \end{align}
 
 <p>
