--- a/src/Notes/Master/2C_2C/DL/02/index.html
+++ b/src/Notes/Master/2C_2C/DL/02/index.html
@@ -43,6 +43,9 @@
 </li><li>
 <a href="02_rnn.html">Recurrent Neural Networks</a>
 
+</li><li>
+<a href="boltzmann.html">Boltzmann Based Networks</a>
+
 </li></ol>
 </div>
   
