[DL] Fix link [skip ci]

--- a/src/Notes/Master/2C_2C/DL/02/index.html
+++ b/src/Notes/Master/2C_2C/DL/02/index.html
@@ -44,7 +44,7 @@
 <a href="02_rnn.html">Recurrent Neural Networks</a>
 
 </li><li>
-<a href="boltzmann.html">Boltzmann Based Networks</a>
+<a href="03_boltzmann.html">Boltzmann Based Networks</a>
 
 </li></ol>
 </div>
