[AGAA] Fix links [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -88,6 +88,9 @@ Analytic Geometry and Nonlinear Systems
 <li>
 <a href="07_01.html">Circles and Parabolas</a>
 
+</li><li>
+<a href="07_02.html">Ellipses and Hyperbolas</a>
+
 </li></ol>
 </li></ol>
 </div>
