--- a/src/Notes/Master/2C_2C/DL/02/index.html
+++ b/src/Notes/Master/2C_2C/DL/02/index.html
@@ -46,6 +46,9 @@
 </li><li>
 <a href="03_boltzmann.html">Boltzmann Based Networks</a>
 
+</li><li>
+<a href="04_autoencoders.html">Autoencoders</a>
+
 </li></ol>
 </div>
   
